--- a/app/globals.css
+++ b/app/globals.css
@@ -12,13 +12,13 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #2d2d2d;
+    --foreground: #ffffff;
   }
 }
 
 html.dark {
-  --background: #0a0a0a;
+  --background: #000000;
   --foreground: #ededed;
 }
 
