--- a/app/globals.css
+++ b/app/globals.css
@@ -1,25 +1,34 @@
 @import "tailwindcss";
+@custom-variant dark (&:where(.dark, .dark *));
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #000000;
+  --border: #a4a4a4;          
+  --surface-hover: #a4a4a4;  
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --color-border: var(--border);
+  --color-surface-hover: var(--surface-hover);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #2d2d2d;
-    --foreground: #ffffff;
+    --background: #111827;     
+    --foreground: #e5e7eb;     
+    --border: #505a67;        
+    --surface-hover: #505a67;   
   }
 }
 
 html.dark {
-  --background: #000000;
-  --foreground: #ededed;
+  --background: #111827;     
+  --foreground: #e5e7eb;     
+  --border: #505a67;        
+  --surface-hover: #505a67;  
 }
 
 body {
